force-app/main/default/objects/Marketing_Cloud_Client__mdt/Marketing_Cloud_Client__mdt.object-meta.xml
<CustomObject>
    <label>Marketing Cloud Client</label>
    <pluralLabel>Marketing Cloud Clients</pluralLabel>
</CustomObject>