force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Client_Sec__c.field-meta.xml
<CustomField>
    <fullName>Client_Sec__c</fullName>
    <label>Client Sec</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>