force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Comm_Log_Master__c.field-meta.xml
<CustomField>
    <fullName>Comm_Log_Master__c</fullName>
    <label>Comm Log Master</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>