force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Host_Domain__c.field-meta.xml
<CustomField>
    <fullName>Host_Domain__c</fullName>
    <label>Host Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>