force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/MC_Org__c.field-meta.xml
<CustomField>
    <fullName>MC_Org__c</fullName>
    <label>MC Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>