force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Mid__c.field-meta.xml
<CustomField>
    <fullName>Mid__c</fullName>
    <label>Mid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>