force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Query_Cats_Url__c.field-meta.xml
<CustomField>
    <fullName>Query_Cats_Url__c</fullName>
    <label>Query Cats Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>