force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Query_De_Url__c.field-meta.xml
<CustomField>
    <fullName>Query_De_Url__c</fullName>
    <label>Query De Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>