force-app/main/default/objects/Marketing_Cloud_Client__mdt/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>